skin/frontend/creo/default/style.css
/* ... */
#header:before {
    display: block;
    position: absolute;
    bottom: 0;
    left: 15px;
    right: 15px;
    background: #eee;
    height: 1px;
    content: '';
}
#header {
    display: block;
    content: '';
    clear: both;
}
.logo {
    display: block;
    width: 137px;
    margin: 22px 0 16px;
}
.logo img {
    display: block;
    width: 100%;
    height: auto;
}
#nav:after {
    display: block;
    content: '';
    clear: both;
}
#nav ol {
    margin: 0;
    padding: 0;
    list-style: none;
    /*	letter-spacing: -1px;*/
    text-transform: uppercase;
    font: 15px/21px "Roboto Condensed", Helvetica, Arial, sans-serif;
}
#nav ol > li {
    float: left;
    margin: 0 5px 0 0;
}
#nav ol > li > a {
    display: block;
    padding: 0 15px 5px;
    position: relative;
}
#nav ol > li a:hover { text-decoration: none; }
#nav ol > li > a:after {
    bottom: -2px;
    content: "";
    height: 2px;
    left: 0;
    position: absolute;
    right: 0;
}
#nav ol > li.active > a:before,
#nav ol > li:hover > a:before {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    height: 5px;
    background: #000;
    transform: skewX(-30deg);
    -moz-transform: skewX(-30deg);
    -webkit-transform: skewX(-30deg);
    -ms-transform: skewX(-30deg);
    content: '';
}
#nav .drop-parent:hover > a:before {
    transform: skewX(0deg);
    -moz-transform: skewX(0deg);
    -webkit-transform: skewX(0deg);
    -ms-transform: skewX(0deg);
}
.small-header #nav .drop-parent:hover > a:before {
    transform: skewX(-30deg);
    -moz-transform: skewX(-30deg);
    -webkit-transform: skewX(-30deg);
    -ms-transform: skewX(-30deg);
}
#header .right-area { text-align: right; }
#header .cart {
    text-align: center;
    display: inline-block;
    vertical-align: top;
    background: #000;
    width: 82px;
    padding: 22px 0 10px;
    position: relative;
    z-index: 33;
}
#header .cart:before {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    width: 0;
    height: 0;
    border-style: solid;
    border-width: 0 0 20px 130px;
    border-color: transparent transparent #fff;
    content: '';
}
#header .cart .opener {
    font: bold 12px/16px "Roboto Condensed", Helvetica, Arial, sans-serif;
    color: #fff;
    text-transform: uppercase;
    position: relative;
    display: block;
    padding: 12px 0;
    z-index: 22;
}
#header .cart .opener:hover {
    text-decoration: none;
    opacity: 0.9;
}
#header .cart .opener:before {
    font-family: 'fontello';
    line-height: 16px;
    font-size: 22px;
    height: 16px;
    display: inline-block;
    vertical-align: middle;
    margin: 0 6px 0 0;
    content: '\e80d';
}
#header .cart .opener:after {
    background: #f16167;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    content: '';
    z-index: -1;
    transform: skewY(-9deg);
    -moz-transform: skewY(-9deg);
    -webkit-transform: skewY(-9deg);
    -ms-transform: skewY(-9deg);
}
#header .cart .opener .count {
    background: #fff;
    border-radius: 50%;
    height: 13px;
    left: 11px;
    position: absolute;
    top: 8px;
    width: 13px;
    border: 1px solid #f16167;
    text-align: center;
    color: #222;
    font: 8px/10px "Roboto Condensed", Helvetica, Arial, sans-serif;
}
#header .cart .slide {
    background: #fff;
    position: absolute;
    right: 0;
    padding: 10px 0 16px;
    margin: 20px 0 0;

    width: 300px;
    box-shadow: 5px 5px 5px -2px rgba(0,0,0,.23);
}
.mCustomScrollBox { max-height: 500px !important; }
.mCSB_inside > .mCSB_container { margin: 0 0px 0 0 !important; }
.mCSB_dragger { background: #fff; }
.mCSB_scrollTools { opacity: 1 !important; }
#header .cart .product {
    padding: 16px;
    border-bottom: 2px solid #e4e4e4;
    overflow: hidden;
    text-align: left;
}
#header .cart .alignleft {
    float: left;
    width: 67px;
    margin: 0 16px 0 0;
}
#header label,
#header .cart .price label {
    color: #222;
    display: inline-block;
    font: 12px/14px "Roboto Condensed",Helvetica,Arial,sans-serif;
    margin: 0 7px 3px 0;
    vertical-align: middle;
    text-transform: uppercase;
}
#header .cart .price label{
    margin: 0 7px 0 0;
    line-height: 20px;
}
.minicartInnerUl {
    font: 12px/14px "Roboto Condensed",Helvetica,Arial,sans-serif;
    padding: 0;
    margin: 0;
    text-transform: uppercase;
    color: #222;
}
.mini-products-list {
    padding: 0;
    margin: 0;
}
#header .cart .alignleft img {
    display: block;
    width: 100%;
    height: auto;
}
#header .cart .text-area {
    overflow: hidden;
    position: relative;
    padding: 0 20px 0 0;
}
#header .cart h2 {
    margin: 0 0 10px;
    text-transform: uppercase;
    color: #222;
    font: 12px/14px "Roboto Condensed", Helvetica, Arial, sans-serif;
}
#header .cart .price {
    color: #f16167;
    font: 15px/20px "Roboto Condensed", Helvetica, Arial, sans-serif;
}
#header .cart .cancel {
    color: #ddd;
    position: absolute;
    top: 0;
    right: 0;
    font-size: 16px;
}
#header .cart .total .price {
    font-size: 20px !important;
    line-height: 22px !important;
}
#header .cart .cancel:hover {
    text-decoration: none;
    color: #222;
}
#header .cart .edit {
    color: #ddd;
    position: absolute;
    top: 22px;
    right: 0;
    font-size: 14px;
}
#header .cart .edit:hover {
    color: #222;
    text-decoration: none;
}
#header .cart .total {
    display: block;
    padding: 20px;
    color: #000;
    font: bold 20px/22px "Roboto Condensed", Helvetica, Arial, sans-serif;
}
#header .cart .btn-holder {
    overflow: hidden;
    text-align: center;
}
#header .cart .btn-holder a {
    display: block;
    padding: 5px 10px;
    margin: 0 16px;
    background: #ef4f61;
    text-transform: uppercase;
    color: #fff;
    position: relative;
    border: 3px solid #ef4f61;
    font: bold 14px/18px Arial, Helvetica, sans-serif;
}
#header .cart .btn-holder a:hover{
    text-decoration: none;
    border-color: #000;
}
/* ... */

